Revert "fixed alignment issue in tracks"
This reverts commit cda642a1f1d932f018e9a7f83e3b320d61344794.

--- a/client/src/assets/css/Tracks.css
+++ b/client/src/assets/css/Tracks.css
@@ -10,11 +10,7 @@
   padding: 0 20px;
 }
 
-.Tracks.themes {
-}
-
 .Tracks .theme {
-  width: 200px;
   display: inline-block;
   margin: 40px 40px 0 40px;
 }
